--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,57 +1,97 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
-.body {
-    background-color: #1A1A1A;
+
+body {
+    background-color: #ffffff;
     color: #FFFFFF;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-.cabecario{
+
+.header {
     display: flex;
-    background-color: #A8D5BA;
-    font-family: "Orbitron", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 12px;
+    background-color: #14458d;
+    padding: 20px;
     align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
 }
-.cabecario img{
+
+.header .explore {
+    padding-left: 2%;
+}
+
+.header .center-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.header img {
     max-height: 30px;
     max-width: 30px;
-    margin: 30px;
-    display: block;
+    margin-right: 10px;
 }
-.cabecario .NomeDoSite {
-    color: #000;
-}
-.cabecario .Explorar{
-    display: flex;
-    justify-content: left;
-}
-.cabecario button {
+
+.header button {
     background: none;
     border: none;
     padding: 0;
 }
-.cabecario .superintendent {
+
+.header .Fernweh {
+    color: #000000;
     font-size: 20px;
 }
-.botaoexplorar {
-    font-family: "Orbitron", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-.Explorar {}
-footer {
-    bottom: 0;
+
+.logo-container {
+    display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #221e1f;
+}
+
+.explore-button {
+    font-size: 15px;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.search-input {
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 25px;
+    width: 200px;
+}
+
+.search-button {
+    padding: 10px 15px;
+    background-color: #113874;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 25px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: #0f2a54;
+}
+
+
+.account-container {
+    display: flex;
+    color: black;
+    align-items: center;
+    margin-left: auto;
+    padding-right: 2%;
+}
+
+.account-container a {
+    color: black;
+    text-decoration: none;
 }
